--- a/demo/src/main/resources/templates/list-cv.html
+++ b/demo/src/main/resources/templates/list-cv.html
@@ -76,7 +76,7 @@
                                         <a class="nav-link active" aria-current="page">Home</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" th:href="@{form}">Form</a>
+                                        <a class="nav-link" th:href="@{default}">Form</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="">Item</a>
