--- a/demo/src/main/resources/templates/default.html
+++ b/demo/src/main/resources/templates/default.html
@@ -6,9 +6,21 @@
     <link rel="stylesheet" href="../static/bootstrap-5.3.0/css/bootstrap.min.css"
           th:href="@{/bootstrap-5.3.0/css/bootstrap.min.css}">
     <script th:src="@{/responsivevoice.js}"></script>
+    <style>
+        body {
+            background-image: url("https://craft-cv.com/image/en/6/cv-builder-online.png");
+            background-repeat: no-repeat;
+            max-width: 1920px;
+            max-height: 1080px;
+        }
+    </style>
 </head>
 <body onload="show()">
-<h2>Trang này để chuyển hướng chọn cách nhập</h2>
+<div>
+    <h1 class="text-center" style="margin-top: 19%">Trang này để chuyển hướng chọn cách nhập</h1>
+    <h4 class="text-center text-danger">Nếu bạn muốn nhập thông tin bằng tay thì nhấn phím qua trái, nhập thông tin bằng giọng nói thì nhấn phím qua phải.</h4>
+</div>
+
 
 <script>
 
